# HW_GAM

./: .gitignore  CMakeLists.txt  Makefile  client.cpp  example.cpp  server.cpp
gam/scripts/: benchmark-all.sh  slaves
gam/src/: local_request.cc  remote_request.cc
gam/test/: example.cc  hashtable_test  hashtable_throw_test
inc/mcs/: api.h  mcs_config.h
inc/mcs/api/: common_types.h  function_manager.h  mcs_remote.h
src/: CMakeLists.txt  CMakelists.txt  example.cpp  main.cpp
src/mcs/: api.cpp  api.h  mcs_config.h
src/mcs/api/: arguments.h  common_types.h  function_manager.h  mcs_exception.h  mcs_remote.h  mcs_runtime.h  mcs_runtime_holder.h  object_ref.h  overload.h  runtime_env.h  serializer.h  static_check.h  task_caller.h  task_options.h  type_traits.h  xlang_function.h
src/mcs/common/: buffer.h  constants.h  function_descriptor.cpp  function_descriptor.h  id.cpp  id.h  id_def.h  mcs_config.cpp  mcs_config.h  mcs_config_def.h  mcs_internal_flag_def.h  mcs_object.cpp  mcs_object.h  runtime_env_common.cpp  runtime_env_common.h  status.cpp  status.h
src/mcs/core/: buffer.h  common.cpp  common.h  config_internal.cpp  config_internal.h  contex.h  context.cpp  context.h  core_worker.h  core_worker_options.h  process.cpp  process.h  status.h
src/mcs/protobuf/: build.sh  common.grpc.pb.cc  common.grpc.pb.h  common.pb.cc  common.pb.h  common.proto  gcs.grpc.pb.cc  gcs.grpc.pb.h  gcs.pb.cc  gcs.pb.h  gcs.proto  runtime_env_common.grpc.pb.cc  runtime_env_common.grpc.pb.h  runtime_env_common.pb.cc  runtime_env_common.pb.h  runtime_env_common.proto
src/mcs/rpc/: client.cpp  client.h  protocol.h  rpc.h  server.cpp  server.h
src/mcs/runtime/: abstract_mcs_runtime.cpp  abstract_mcs_runtime.h  local_mode_mcs_runtime.cpp  local_mode_mcs_runtime.h
src/mcs/runtime/object/: local_mode_object_store.cpp  local_mode_object_store.h  memory_store.cpp  memory_store.h  object_store.cpp  object_store.h
src/mcs/runtime/task/: invocation_spec.h  local_mode_task_submitter.cpp  local_mode_task_submitter.h  scheduling_resources.cpp  scheduling_resources.h  task_common.h  task_executor.cpp  task_executor.h  task_spec.cpp  task_spec.h  task_submitter.h  task_util.h
src/mcs/task/: invocation_spec.h  local_mode_task_submitter.cpp  local_mode_task_submitter.h  task_executor.cpp  task_executor.h  task_spec.cpp  task_spec.h  task_submitter.h  task_util.h
src/mcs/util/: aligned_alloc.c  aligned_alloc.h  function_helper.cpp  function_helper.h  grpc_util.h  logging.cpp  logging.h  macros.h  process_helper.cpp  process_helper.h  util.cpp  util.h  visibility.h
src/mcs/util/sha256/: sha256.c
thrid/: CMakeLists.txt
thrid/nlohmann_json-3.9.1/: CMakeLists.txt
thrid/sha256/: sha256.cpp  sha256.h
